# flatpak-issue

./: build.sh  meson.build  org.example.Example.json
